# vector

./: LICENSE  stack.yaml  vector.cabal  vectorz.cabal
app/: Main.hs
src/: Lib.hs
