name:                vectorz
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fishyFrogFace/vector
license:             BSD3
license-file:        LICENSE
author:              Camilla Rygh
maintainer:          example@example.com
copyright:           2017 Camilla Rygh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable vector-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=2 && <4.9
                     , vectorz
                     , friday-devil >= 0.1.1.1 && < 1
                     , friday >=0.2 && <0.3
                     , transformers >=0.3 && <0.5
                     , ratio-int >=0.1.2 && <0.2
  default-language:    Haskell2010

test-suite vector-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vectorz
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vector
